--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-time-duration",
-  "description": "UI widget for setting time duration. This is a component for vue 3",
-  "version": "0.0.1",
+  "description": "UI Widget to set a time duration. This is a component for vue 3",
+  "version": "0.0.2",
   "private": false,
   "author": "Egor Lentarev",
   "license": "MIT",
