--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-time-duration",
   "description": "UI Widget to set a time duration. This is a component for vue 3",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "private": false,
   "author": "Egor Lentarev",
   "license": "MIT",
@@ -13,7 +13,9 @@
   "main": "./dist/vue3-time-duration.umd.js",
   "module": "./dist/vue3-time-duration.es.js",
   "exports": {
+
     ".": {
+      "types": "./vue3-time-duration.d.ts",
       "import": "./dist/vue3-time-duration.es.js",
       "require": "./dist/vue3-time-duration.umd.js"
     },
@@ -21,7 +23,7 @@
       "import": "./dist/vue3-time-duration.css"
     }
   },
-  "types": "vue3-time-duration.d.ts",
+
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
